--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "main": "src/server.js",
     "scripts": {
         "start": "node src/server.js",
-        "dev": "nodemon src/server.js"
+        "dev": "nodemon src/server.js",
+        "create-admin": "node scripts/createAdmin.js"
     },
     "dependencies": {
         "bcryptjs": "^3.0.3",
